--- a/package.json
+++ b/package.json
@@ -8,22 +8,20 @@
     "test": "npx jest --verbose -i",
     "useCase": "npx ts-node ./CLI/useCaseGenerator.ts",
     "test:coverage": "npx jest --verbose --coverage -i",
-    "migration": "ts-node ./CLI/migrationManager.ts --generate",
-    "migrate": "ts-node --transpileOnly node_modules/.bin/typeorm migration:run -d data-source.ts",
-    "migrate-revert": "ts-node-dev --transpileOnly node_modules/.bin/typeorm migration:revert -d data-source.ts"
+    "migration": "npx drizzle-kit generate:pg",
+    "migrate": "ts-node --transpileOnly ./CLI/runMigration.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.29.3",
     "express": "^4.18.2",
-    "firebase-admin": "^11.10.1",
     "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
+    "postgres": "^3.4.3",
     "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
-    "typeorm": "^0.3.17",
     "typescript": "^4.9.3"
   },
   "devDependencies": {
@@ -33,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.5.0",
+    "drizzle-kit": "^0.20.14",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
