--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "postgres": "^3.4.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
