--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
-    "postgres": "^3.4.3",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
@@ -32,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.5.0",
+    "@types/pg": "^8.11.0",
     "drizzle-kit": "^0.20.14",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
